<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.navendu.inventoryapp.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardBackgroundColor="#EEEEEE"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="320dp">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="196dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/detail_image"
                    android:background="@android:color/darker_gray" />


                <LinearLayout
                    android:id="@+id/text_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_card_height"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/divider"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingLeft="16dp">

                    <TextView
                        android:id="@+id/detail_name_textview"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:textAppearance="?android:textAppearanceListItem"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        tools:text="Product Name" />

                    <TextView
                        android:id="@+id/detail_desc_textview"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textAppearance="?android:textAppearanceListItem"
                        android:textColor="@android:color/black"
                        android:textStyle="italic"
                        tools:text="Description" />

                    <TextView
                        android:id="@+id/detail_quantityavl_textview"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textAppearance="?android:textAppearanceListItem"
                        android:textColor="@android:color/black"
                        tools:text="Quantity Available: 10" />

                    <TextView
                        android:id="@+id/detail_quantitysold_textview"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textAppearance="?android:textAppearanceListItem"
                        android:textColor="@android:color/black"
                        tools:text="Quantity Sold: 10" />

                    <TextView
                        android:id="@+id/detail_price_textview"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:textAppearance="?android:textAppearanceListItem"
                        android:textColor="@android:color/black"
                        tools:text="Price: $100" />
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardBackgroundColor="#EEEEEE"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/sale_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="3"
                    android:hint="@string/product_sale_hint"
                    android:inputType="number" />

                <Button
                    android:id="@+id/button_sale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:gravity="center_vertical"
                    android:text="@string/button_sale"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_shipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardBackgroundColor="#EEEEEE"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/shipment_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="3"
                    android:hint="@string/product_shipment_hint"
                    android:inputType="number" />

                <Button
                    android:id="@+id/button_shipment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:gravity="center_vertical"
                    android:text="@string/button_shipment"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardBackgroundColor="#EEEEEE"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/order_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="3"
                    android:hint="@string/product_order_hint"
                    android:inputType="number" />

                <Button
                    android:id="@+id/button_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:gravity="center_vertical"
                    android:text="@string/button_order"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/delete_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:text="@string/button_delete"
            android:textAlignment="center"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
